--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+:root{
+    --input-linear: linear-gradient(120deg, #E75590, #00C2CB);
+    --button-linear: linear-gradient(120deg, #E75590, #00C2CB, #E75590);
+    --white: #fff;
+    --black: #303030;
+    --gray: #929292;
+    --light-gray: #cfcfcf;
+}
+
 body{
     margin: 0;
     padding: 0;
@@ -6,7 +15,7 @@ body{
 
 .login{
     height: 100vh;
-    background: linear-gradient(120deg, #E75590, #00C2CB);
+    background: var(--input-linear);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,7 +23,7 @@ body{
 .login_container{
     min-height: 400px;
     width: 300px;
-    background-color: white;
+    background-color: var(--white);
     box-sizing: border-box;
     padding: 32px;
     border-radius: 8px;
@@ -24,7 +33,7 @@ body{
 }
 .login_title{
     margin-bottom: 32px;
-    color: #303030;
+    color: var(--black);
 }
 .login_form{
     width: 100%;
@@ -45,7 +54,7 @@ body{
     height: 1px;
     width: 100%;
     margin-bottom: 16px;
-    background-color: #cfcfcf;
+    background-color: var(--light-gray);
     transition: .3s ease-in-out;
 }
 .login_input-border::after{
@@ -54,18 +63,20 @@ body{
     height: 1px;
     width: 0;
     margin-bottom: 16px;
-    background: linear-gradient(120deg, #E75590, #00C2CB);
+    background: var(--input-linear);
     transition: .3s ease-in-out;
 }
-
+.login_input:focus + .login_input-border::after{
+    width: 100%;
+}
 .login_submit{
     height: 48px;
     width: 100%;
     outline: none;
-    background: linear-gradient(120deg, #E75590, #00C2CB, #E75590);
+    background: var(--button-linear);
     background-size: 200%;
     margin-bottom: 32px;
-    color: white;
+    color: var(--white);
     font-size: 16px;
     font-weight: bold;
     border: unset;
@@ -73,9 +84,12 @@ body{
     cursor: pointer;
     transition: .5s ease-in-out;
 }
-
+.login_submit:hover{
+    background-position: right;    
+}
 .login_reset{
     font-size: 12px;
     color: #929292;
     text-decoration: none;
+    margin-left: 60px;
 }
